fix alignment

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -15,7 +15,7 @@ body {
 }
 
 #body {
-    margin: 20px 20px 20px 260px;
+    margin: 20px 20px 20px 20px;
     min-height: 100%;
 }
 
